--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "i18next": "^23.8.1",
     "jquery": "^3.7.1",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "react-i18next": "^14.0.1",
     "scrollreveal": "^4.0.9",
     "swr": "^2.2.5",
