--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.25.0",
     "classnames": "^2.5.1",
     "copy-to-clipboard": "^3.3.3",
+    "crypto-js": "^4.2.0",
     "i18next": "^23.8.1",
     "jquery": "^3.7.1",
     "lodash": "^4.17.21",
@@ -25,6 +26,7 @@
     "wagmi": "^2.5.7"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
     "@umijs/plugins": "^4.1.1",
