--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react-i18next": "^14.0.1",
+    "react-icons": "^5.5.0",
     "scrollreveal": "^4.0.9",
     "swr": "^2.2.5",
     "umi": "^4.1.1",
